# neutron-star

./: .gitmodules  Cargo.toml  README.md  build.rs  test.llvm  test.mlir
runtime/: build.zig
runtime/src/: main.zig
src/: ast.rs  compiler.rs  diagnostic.rs  ir.rs  main.rs  mlir.rs
src/ir/: mod.rs  print.rs  translate.rs
src/lang/: mod.rs  ptr.rs  refcap.rs
src/parser/: grammar.lalrpop  mod.rs
test/emit-test-pony/: .gitignore  main.pony
test/mlir/: test.mlir  test_spirv.mlir
