[package]
name = "neutron-star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.20.0"

[dependencies]
melior = { git = "https://github.com/phase/melior.git", branch = "pub-everywhere" }
mlir-sys = "*"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
regex = "1"
generational-arena = "0.2"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
internship = "0.6.0"
